Added Switch problems

--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -24,3 +24,6 @@ content:
 - Integer part of a number
 - Calculating factorials
 - Sum of numbers in the range
+- Harry Potter
+- Direction
+- Floor-space of the room
